--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:id="@+id/linearLayout">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -49,7 +50,8 @@
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/microphone_icon"
                 android:contentDescription="@null"
-                android:onClick="onClickButton" />
+                android:onClick="onClickButton"
+                android:nestedScrollingEnabled="true" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -66,5 +68,16 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="760dp"
+        android:layout_marginStart="760dp" />
 
 </RelativeLayout>
