--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,77 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".UI.MainActivity">
+    tools:context="com.example.alexiscr.lescotranslator.UI.MainActivity">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:weightSum="1"
-        android:id="@+id/linearLayout">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="104dp"
-            android:weightSum="1">
-
-            <EditText
-                android:layout_width="249dp"
-                android:layout_height="78dp"
-                android:inputType="textMultiLine"
-                android:ems="10"
-                android:id="@+id/textViewResult"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="143dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="98dp"
-            android:layout_height="98dp">
-
-            <ImageButton
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:id="@+id/imageButtonMicrophone"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/microphone_icon"
-                android:contentDescription="@null"
-                android:onClick="onClickButton"
-                android:nestedScrollingEnabled="true" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="77dp"
-                android:inputType="textMultiLine"
-                android:ems="10"
-                android:id="@+id/editText2"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="143dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0.89" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_alignBottom="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="760dp"
-        android:layout_marginStart="760dp" />
-
+        android:text="Hellen" />
 </RelativeLayout>
