--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -11,84 +11,112 @@
     android:background="@color/mainbackground">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:weightSum="1"
-        android:id="@+id/linearLayout"
-        android:gravity="center">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="104dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:weightSum="1">
 
-            <EditText
-                android:layout_width="249dp"
-                android:layout_height="78dp"
-                android:inputType="textMultiLine"
-                android:ems="10"
-                android:id="@+id/textViewResult"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="143dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="57dp"
+                android:text="Grabe un audio o escriba lo que desea traducir"
+                android:id="@+id/textView"
+                android:textStyle="normal|bold|italic"
+                android:textSize="17dp"
+                android:textIsSelectable="true"
+                android:layout_marginTop="30dp" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="98dp"
-            android:layout_height="98dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:weightSum="1"
+            android:id="@+id/linearLayout"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/highlighted_text_material_dark">
 
-            <ImageButton
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:id="@+id/imageButtonMicrophone"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/icon_microphone"
-                android:contentDescription="@null"
-                android:onClick="onClickButton"
-                android:nestedScrollingEnabled="true"
-                android:background="@drawable/circle" />
-
-            <EditText
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="77dp"
-                android:inputType="textMultiLine"
-                android:ems="10"
-                android:id="@+id/editText2"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="143dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0.89" />
+                android:layout_height="104dp"
+                android:weightSum="1"
+                android:layout_weight="3.80">
+
+                <EditText
+                    android:layout_width="249dp"
+                    android:layout_height="78dp"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:id="@+id/textViewResult"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="143dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="4.80" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="98dp"
+                android:layout_height="98dp">
+
+                <ImageButton
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:id="@+id/imageButtonMicrophone"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/icon_microphone"
+                    android:contentDescription="@null"
+                    android:onClick="onClickButton"
+                    android:nestedScrollingEnabled="true"
+                    android:background="@drawable/button_audio" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="77dp"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:id="@+id/editText2"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="143dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.89" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="43dp"
-        android:gravity="center">
-
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Traducir"
-            android:id="@+id/btnTranslate"
-            android:gravity="center"
-            android:onClick="onClickTranslate" />
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="43dp"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Traducir"
+                android:id="@+id/btnTranslate"
+                android:gravity="center"
+                android:onClick="onClickTranslate" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
