--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -121,7 +121,7 @@
                 android:text="Traducir"
                 android:id="@+id/btnTranslate"
                 android:gravity="center"
-                android:onClick="onClickTranslate" />
+                android:onClick="translate" />
         </LinearLayout>
     </LinearLayout>
 
