--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -80,7 +80,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="43dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:id="@+id/linearLayout3">
 
         <Button
             android:layout_width="wrap_content"
@@ -90,5 +91,14 @@
             android:gravity="center"
             android:onClick="onClickTranslate" />
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agregar"
+        android:id="@+id/buttonAddWord"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onClickButton" />
 
 </RelativeLayout>
