Seleccion imágenes listo, pendiente guardar en la base de datos.

--- a/app/src/main/res/layout/activity_add_words.xml
+++ b/app/src/main/res/layout/activity_add_words.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/greeting"
+        android:text="@string/AddWord"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -56,9 +56,9 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@android:string/yes"
         android:id="@+id/button"
-        android:layout_below="@+id/imageViewNewPhoto"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
