--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -99,6 +99,6 @@
         android:id="@+id/buttonAddWord"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onClickButton" />
+        android:nestedScrollingEnabled="false" />
 
 </RelativeLayout>
